examples/kju/positive/functions/two_functions_infinite_recursion.kju
fun f():Unit{
	g();
}

fun g():Unit{
	f();
}

fun kju():Unit{
	f();
}