examples/kju/negative/functions/unit_function_returns_value.kju
fun f():Unit{
	return 5;
}

fun kju():Unit{
}